# google-cloud-run-gitub-actions

./: .firebaserc  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: main.py
src/: index.html
